fix color on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,9 +16,6 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-}
 
 @layer utilities {
   .text-balance {
